--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <li>We moderate content and provide user reporting tools</li>
     <li>We ban offending accounts and cooperate with authorities</li>
   </ul>
-  <p>If you have concerns, please contact us at: <strong>support@teacherslounge.com</strong></p>
+  <p>If you have concerns, please contact us at: <strong>nedallen24@gmail.com</strong></p>
 </body>
 </html>
